[package]
name = "genetic_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "^1.9"
itertools = "^0.12.1"
rand = "^0.8.5"
once_cell = "^1.19"
serde = {version="^1.0.197", features = ["derive"]}
bincode = "^1.3.3"
mpi = {version="^0.7.0"}